hero section spacing fixed

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -3,6 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
 
+.montserrat-700 {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+  }
 .montserrat-900 {
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
