--- a/css/large.css
+++ b/css/large.css
@@ -24,6 +24,11 @@
     margin: 30px 0px;
 }
 
+.hero .right-side img {
+    width: 400px;
+    border-radius: 15px;
+}
+
 .services h1 {
     font-size: 5rem;
 }
