--- a/css/medium.css
+++ b/css/medium.css
@@ -24,6 +24,11 @@
     margin: 30px 0px;
 }
 
+.hero .right-side img {
+    width: 350px;
+    border-radius: 15px;
+}
+
 .services h1 {
     font-size: 4rem;
 }
