--- a/css/small.css
+++ b/css/small.css
@@ -30,6 +30,10 @@ html {
     margin: 30px 0px;
 }
 
+.hero .right-side img {
+    width: 300px;
+}
+
 .btn-grp2 {
     justify-content: center;
 }
